bugfixed and removed systemt.exit() call